tests/fixtures/invalid/divmod_set_int.py
# Cannot call divmod() with Set[int], Int
x = divmod({1, 2, 3}, 1)
